Set default mode of TextAE to view mode

--- a/app/views/ai_annotations/edit.html.erb
+++ b/app/views/ai_annotations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="textae-container">
-  <div id="ai-textae-editor" mode="edit">
+  <div id="ai-textae-editor" mode="view">
     <%= @ai_annotation.content %>
   </div>
 </div>
