Add selected text information of TextAE

--- a/app/views/ai_annotations/edit.html.erb
+++ b/app/views/ai_annotations/edit.html.erb
@@ -1,7 +1,8 @@
 <div class="textae-container">
-  <div id="ai-textae-editor" mode="view">
+  <div id="ai-textae-editor" mode="view" inspect="current-annotation">
     <%= @ai_annotation.content %>
   </div>
+  <div id="current-annotation"></div>
 </div>
 
 <%= form_with model: @ai_annotation, url: ai_annotation_path(@ai_annotation.uuid), class: "ai-annotation-form" do |f| %>
