Implemented warning dialog
# Conflicts:
#	app/models/ai_annotation.rb

--- a/app/views/ai_annotations/edit.html.erb
+++ b/app/views/ai_annotations/edit.html.erb
@@ -1,3 +1,8 @@
+<%= render partial: 'layouts/dialog', locals: {
+  message: @dialog_message,
+  buttons: @dialog_buttons
+} %>
+
 <div class="textae-container">
   <div id="ai-textae-editor" mode="view" inspect="current-annotation">
     <%= @ai_annotation.content %>
