--- a/app/views/ai_annotations/edit.html.erb
+++ b/app/views/ai_annotations/edit.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: 'layouts/dialog', locals: {
+  dialog_opened: @dialog_opened,
   message: @dialog_message,
   buttons: @dialog_buttons
 } %>
