--- a/app/views/ai_annotations/edit.html.erb
+++ b/app/views/ai_annotations/edit.html.erb
@@ -5,13 +5,13 @@
 } %>
 
 <div class="textae-container">
-  <div id="ai-textae-editor" mode="view" inspect="current-annotation">
+  <div id="ai-textae-editor" mode="relation-edit" inspect="current-annotation">
     <%= @ai_annotation.content %>
   </div>
   <div id="current-annotation"></div>
 </div>
 
-<%= form_with model: @ai_annotation, url: ai_annotation_path(@ai_annotation.uuid), class: "ai-annotation-form" do |f| %>
+<%= form_with model: @ai_annotation, url: ai_annotation_path(@ai_annotation), class: "ai-annotation-form" do |f| %>
   <div class="prompt-field">
     <%= f.textarea :prompt, required: true, rows: 3, placeholder: "Order how to annotate the text" %>
   </div>
