--- a/app/views/ai_annotations/edit.html.erb
+++ b/app/views/ai_annotations/edit.html.erb
@@ -1,7 +1,9 @@
 <%= render partial: 'layouts/dialog', locals: {
   dialog_opened: @dialog_opened,
   message: @dialog_message,
-  buttons: @dialog_buttons
+  buttons: @dialog_buttons,
+  content: @content,
+  prompt: @prompt
 } %>
 
 <div class="textae-container">
@@ -11,7 +13,7 @@
   <div id="current-annotation"></div>
 </div>
 
-<%= form_with model: @ai_annotation, url: ai_annotation_path(@ai_annotation), class: "ai-annotation-form" do |f| %>
+<%= form_with url: ai_annotation_path(@ai_annotation.uuid), model: @ai_annotation, class: "ai-annotation-form", local: true do |f| %>
   <div class="prompt-field">
     <%= f.textarea :prompt, required: true, rows: 3, placeholder: "Order how to annotate the text" %>
   </div>
