--- a/app/views/layouts/_dialog.html.erb
+++ b/app/views/layouts/_dialog.html.erb
@@ -2,14 +2,19 @@
   is_open = local_assigns[:dialog_opened] || false
   dialog_message = local_assigns[:message] || 'No message provided'
   dialog_buttons = local_assigns[:buttons] || [{label: 'OK', value: 'ok'}]
+  content = local_assigns[:content] || ''
+  prompt = local_assigns[:prompt] || ''
 %>
 
 <dialog id="dialog" <%= "open" if is_open %>>
   <p><%= dialog_message %></p>
-  <form id="dialog-form" method="post">
+  <%= form_with url: ai_annotation_path(local_assigns[:content]&.dig('uuid') || params[:uuid]), model: @ai_annotation, id: "dialog-form", local: true do |f| %>
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+    <%= f.hidden_field :content, value: raw(local_assigns[:content]) %>
+    <%= f.hidden_field :prompt, value: local_assigns[:prompt] %>
     <input type="hidden" name="button" id="dialog-button-value" />
     <% dialog_buttons.each do |btn| %>
       <button type="button" onclick="document.getElementById('dialog-button-value').value='<%= btn[:value] %>'; document.getElementById('dialog-form').submit();"><%= btn[:label] %></button>
     <% end %>
-  </form>
+  <% end %>
 </dialog>
