--- a/app/views/layouts/_dialog.html.erb
+++ b/app/views/layouts/_dialog.html.erb
@@ -22,12 +22,23 @@
       <%= f.hidden_field :content, value: raw(content) %>
       <%= f.hidden_field :prompt, value: prompt %>
       <input type="hidden" name="button" id="dialog-button-value" />
+      <input type="hidden" name="btn_force" id="dialog-btn-force" />
+      <input type="hidden" name="btn_cancel" id="dialog-btn-cancel" />
+      <input type="hidden" name="btn_ok" id="dialog-btn-ok" />
 
       <div class="dialog-buttons">
         <% dialog_buttons.each do |btn| %>
           <button type="button"
                   data-action="<%= btn[:value] %>"
-                  onclick="document.getElementById('dialog-button-value').value='<%= btn[:value] %>'; document.getElementById('dialog-form').submit();">
+                  onclick="
+                    if('<%= btn[:value] %>' === 'force') {
+                      document.getElementById('dialog-btn-force').value = '1';
+                    } else if('<%= btn[:value] %>' === 'cancel') {
+                      document.getElementById('dialog-btn-cancel').value = '1';
+                    } else {
+                      document.getElementById('dialog-btn-ok').value = '1';
+                    }
+                    document.getElementById('dialog-form').submit();">
             <%= btn[:label] %>
           </button>
         <% end %>
@@ -47,7 +58,7 @@
               const dialog = document.getElementById('dialog');
               if (dialog && dialog.open) {
                   // Perform the same action as clicking the cancel button
-                  document.getElementById('dialog-button-value').value = 'cancel';
+                  document.getElementById('dialog-btn-cancel').value = '1';
                   document.getElementById('dialog-form').submit();
               }
           }
@@ -57,7 +68,7 @@
       document.getElementById('dialog').addEventListener('click', function(event) {
           if (event.target === this) {
               // Perform the same action as clicking the cancel button
-              document.getElementById('dialog-button-value').value = 'cancel';
+              document.getElementById('dialog-btn-cancel').value = '1';
               document.getElementById('dialog-form').submit();
           }
       });
