Add control=visible to TextAE component

--- a/app/views/ai_annotations/edit.html.erb
+++ b/app/views/ai_annotations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="textae-container">
-  <div id="ai-textae-editor" mode="view" inspect="current-annotation">
+  <div id="ai-textae-editor" mode="view" control="visible" inspect="current-annotation">
     <%= @ai_annotation.content %>
   </div>
   <div id="current-annotation"></div>
